Cleanup: use Java17' Records.
Fixes #1526.